<resources>
    <string name="app_name">Actividades Espol</string>
    <string name="title_activity_noticias">Noticias</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="regresar">Regresar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="trivia">Trivia</string>
    <string name="_4_que_deporte_practica">4) Que deporte practica?</string>
    <string name="title_activity_resultado_formulario">ResultadoFormulario</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="inicio">inicio</string>
    <string name="resultados_de_la_encuesta">Resultados de la Encuesta</string>
    <string name="celula">Celula</string>
</resources>
